Updated title & Button property

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<title>First_Project</title>
+	<title>Zomato</title>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="style.css">
@@ -39,7 +39,8 @@
 					<h1 class="hero__text">
 						Order food from favourite restaurants near you.
 					</h1>
-					<button class="button__primary">Order Now</button>
+					<div class="place__order">
+					<button class="button__primary">Order Now</button></div>
 				</div>
 			</section>
 			<!--Explore Menu Section-->
@@ -97,7 +98,7 @@
 					<div class="update">
 					<div class="updation__method">
 						<input type="email" name="Email" class="email__input" placeholder="email@email.com"></div>
-					<button class="button__primary">Get Updates</button>
+					<div class="update__option"><button class="button__primary">Get Updates</button></div>
 					</div>
 				</section>
 				<section class="quote__section">
