Repositioning of Update button

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 					<div class="update">
 					<div class="updation__method">
 						<input type="email" name="Email" class="email__input" placeholder="email@email.com"></div>
-					<div class="update__option"><button class="button__primary">Get Updates</button></div>
+					<button class="button__primary">Get Updates</button>
 					</div>
 				</section>
 				<section class="quote__section">
